[gd_scene load_steps=4 format=3 uid="uid://dt6k0o713vafu"]

[ext_resource type="Script" uid="uid://cuobua60xuvxa" path="res://src/ui/hud.gd" id="1_eqvli"]
[ext_resource type="AudioStream" uid="uid://boj4au3yx4yfd" path="res://assets/Free Football Assets/Muchachos 8-bit simple.wav" id="2_4rn03"]
[ext_resource type="AudioStream" uid="uid://gex5ybimwcmc" path="res://assets/Sfx/referee-whistle.mp3" id="3_snmo6"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_eqvli")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 13.0
offset_top = 10.0
offset_right = 53.0
offset_bottom = 33.0

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"

[node name="MainMenuButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 69.0
offset_right = 100.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
text = "MAIN MENU
"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4rn03")
volume_db = 10.0

[node name="PlaySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_snmo6")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
